@@ -1,3 +1,9 @@
+2011-08-14  Simson Garfinkel  <simsong@t.nitroba.org>
+
+	* src/display.cpp (error): removed print_error(), since it did the same thing that error() did.
+
+	* src/main.h (d): added __attribute__ ((__noreturn__)) to fatal_error
+
 2011-08-12  Simson Garfinkel  <simsong@t.nitroba.org>
 
 	* src/display.cpp (error): always puts progname on error now. removed explicit "%s: " and progname from practially every place error was called.
